<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <ImageView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:adjustViewBounds="true"
               android:scaleType="fitXY"
               android:src="@drawable/pixel_google"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_6_photos"
               android:padding="8dp"
               android:drawableLeft="@drawable/ic_collections_white_18dp"
               android:drawablePadding="4dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Small"
               android:textColor="@color/white"
               android:background="#4D000000"
               android:layout_marginLeft="16dp"
               android:layout_marginBottom="16dp"
               android:gravity="center_vertical"
               android:layout_gravity="bottom"
               />

       </FrameLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/_735"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginBottom="8dp"
           android:textSize="32sp"
           android:textColor="@color/black"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/stock_tinggal_5_buah"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="16dp"
           android:textSize="12sp"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/content_text"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="16dp"
           android:textColor="@color/black"
           android:lineSpacingMultiplier="1"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/spesifikasi"
           android:textSize="12sp"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="8dp"
           />

       <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="8dp"
           >

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp"
               >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:text="@string/display"
                   android:layout_marginRight="16dp"
                   />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/content_specs_display"
                   android:textSize="14sp"
                   android:layout_weight="1"
                   android:textColor="@color/black"
                   />

           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp"
               >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/size"
                   android:textSize="14sp"
                   android:layout_marginRight="16dp"
                   />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:text="@string/content_specs_size"
                   android:layout_weight="1"
                   android:textColor="@color/black"
                   />

           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp"
               >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/battery"
                   android:textSize="14sp"
                   android:layout_marginRight="16dp"
                   />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:text="@string/content_specs_battery"
                   android:layout_weight="1"
                   android:textColor="@color/black"
                   />

           </TableRow>

       </TableLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="8dp"
           android:text="@string/dijual_oleh"
           android:textSize="12sp"
           />

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="8dp"
           >

           <ImageView
               android:id="@+id/profile_image"
               android:layout_width="56dp"
               android:layout_height="56dp"
               android:src="@drawable/photo_2"
               android:layout_centerVertical="true"
               android:layout_marginRight="16dp"
               />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/profile_image"
               android:layout_centerVertical="true"
               android:text="@string/narendra_wicaksono"
               android:textColor="@color/black"
               />

       </RelativeLayout>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="16dp"
           android:background="@color/purple_500"
           android:textColor="@color/white"
           android:elevation="0dp"
           android:text="@string/beli"
           />

   </LinearLayout>

</ScrollView>